<resources>
    <string name="app_name">Calculator</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonPt">.</string>
    <string name="buttonResult">=</string>
    <string name="buttonMc">MC</string>
    <string name="buttonMr">MR</string>
    <string name="buttonM_minus">M-</string>
    <string name="buttonM_plus">M+</string>
    <string name="buttonDivision">/</string>
    <string name="buttonOff">Off</string>
    <string name="buttonMultiplication">X</string>
    <string name="buttonCe">CE</string>
    <string name="buttonMinus">-</string>
    <string name="buttonC">C</string>
    <string name="buttonPlus">+</string>
    <string name="buttonOn">ON</string>
    <string name="theme_mode">Theme mode dark/light</string>
    <string name="buttonSettings">Settings</string>
    <string name="title_activity_settings">activity_settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>